--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 	<head>
-    <link rel="dns-prefetch" href="https://universal.wgplayer.com"/>
+<!--     <link rel="dns-prefetch" href="https://universal.wgplayer.com"/>
 <script type="text/javascript" async>!function(e,t){a=e.createElement("script"),m=e.getElementsByTagName("script")[0],a.async=1,a.src=t,a.fetchPriority='high',m.parentNode.insertBefore(a,m)}(document,"https://universal.wgplayer.com/tag/?lh="+window.location.hostname+"&wp="+window.location.pathname+"&ws="+window.location.search);
 </script>
-<meta property="og:image" content="https://lnahtml.github.io/img/crossy-road.png">
+<meta property="og:image" content="https://lnahtml.github.io/img/crossy-road.png"> -->
 
 		<link rel="icon" href="images/favicon.png" sizes="32x32">
 		<meta charset="utf-8">
@@ -179,7 +179,7 @@
             </div>  
             <br/>
 
-            <div class="col-lg-12 col-md-4 col-6 list-grid">
+         <!--    <div class="col-lg-12 col-md-4 col-6 list-grid">
               <a  title="Tag" href="/play/temple-run-2.html">
                 <div class="list-game">
                   <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/temple-run-2.png" data-src="https://lnahtml.github.io/img/temple-run-2.png" class="small-thumb img-rounded" alt="Temple Run 2"></div>
@@ -187,7 +187,7 @@
                 </div>
               </a>
             </div>   
-            <br/>
+            <br/> -->
             <div class="col-lg-12 col-md-4 col-6 list-grid">
               <a  title="House Of Hazards" href="/play/murder.html">
                 <div class="list-game">
